# rusty-bookstore

./: .env  Cargo.toml  LICENSE.MIT  README.md  docker-compose.yml  generate.sh  rust-toolchain.toml
app/: Cargo.toml
app/src/: app.rs  lib.rs
app/src/schema/: books_book.rs  prelude.rs
backend/: Cargo.toml
backend/src/: main.rs
backend/src/schema/: mod.rs
django-schema/: manage.py  pyproject.toml
django-schema/books/: admin.py  models.py
django-schema/books/management/commands/: seed.py
django-schema/books/migrations/: 0001_initial.py  0002_auto_20211220_0217.py
django-schema/bookstore_schema/: asgi.py  settings.py  urls.py  wsgi.py
rusty-bookstore-backend/: Cargo.toml
rusty-bookstore-backend/src/: main.rs
rusty-bookstore-schema/: Cargo.toml
rusty-bookstore-schema/src/schema/: books_author.rs  books_basket.rs  books_book.rs  books_genre.rs  books_order.rs  books_patron.rs  books_publisher.rs  mod.rs  prelude.rs
rusty-bookstore-tui/: Cargo.toml
rusty-bookstore-tui/src/: lib.rs  main.rs
rusty-bookstore-tui/src/app/: actions.rs  mod.rs  state.rs  ui.rs
rusty-bookstore-tui/src/io/: handler.rs  mod.rs
