[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

yew = { git = "https://github.com/yewstack/yew" }
yewprint = { path = "/home/forest/Documents/git/yewprint/yewprint" }
material-yew = "0.1"
web-sys = { version = "0.3", features = ["Window", "MediaQueryList"] }

anyhow = "1"
reqwasm = "0.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"

rusty-bookstore-schema = { path = "../rusty-bookstore-schema", features = ["frontend"] }
# getrandom = { version = "=0.2.3", features = ["js"] }
# indexmap = "=1.6.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
