[tool.poetry]
name = "django-schema"
version = "0.1.0"
description = "Django ORM schema for the Rusty Bookshop"
authors = ["Forest Anderson <forestkzanderson@gmail.com>"]
license = "MIT/Apache-2"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.15"
django-seed = "^0.3.1"
black = "^21.11b1"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
