[package]
name = "rusty-store-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "rusty_bookstore_backend"
# path = "src/lib.rs"

# [[bin]]
# name = "bin"
# path = "src/main.rs"

[dependencies]
sea-orm = { version = "^0", features = [ "runtime-tokio-rustls", "macros", "with-chrono", "sqlx-postgres" ], default-features = false }
tokio = { version = "1", features = ["full"] }
warp = "0.3"

rusty-bookstore-schema = { path = "../rusty-bookstore-schema" }
