[package]
name = "rusty-bookstore-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0", features = [ "runtime-tokio-rustls", "macros", "with-chrono", "sqlx-postgres" ], default-features = false }
serde = "1"