[package]
name = "rusty-bookstore-schema"
version = "0.1.0"
edition = "2021"

[features]
frontend = ["rust_decimal"]
backend = ["sea-orm"]

[dependencies]
sea-orm = { version = "^0", features = [ "runtime-tokio-rustls", "macros", "with-chrono", "sqlx-postgres" ], default-features = false, optional = true }
rust_decimal = { version = "1.18.0", optional = true }
serde = "1"